--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,4 +10,20 @@
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th colspan="2">Product</th>
+        <th>Unit Price</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @cart_total = 0 %>
+    <span> Total price: <%= @order.total_cents/100%></span>
+    <% @order.line_items.each do |line_item| %>
+    <%= render 'item', line_item: line_item %>
+    <% end %>
+    </tbody>
 </section>
