--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,15 @@
 <section class="cart-show">
 
+<%if cart.count === 0%>
+  <header class="page-header">
+    <h1>My Cart is Empty!</h1>
+  </header>
+
+  <a class="navbar-brand" href="/">Return to the Jungle</a>
+<%else%>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -16,9 +22,9 @@
       </thead>
       <tbody>
         <% @cart_total = 0 %>
-        <% cart.each do |product_id, details| %>
-          <%= render 'item', product_id: product_id, details: details %>
-        <% end %>
+          <% cart.each do |product_id, details| %>
+            <%= render 'item', product_id: product_id, details: details %>
+          <% end %>
       </tbody>
       <tfoot>
         <tr>
@@ -49,5 +55,6 @@
       <% end %>
     </div>
   </div>
+<%end%>
 
 </section>
