--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,12 @@
 <!-- app/views/users/new.html.erb -->
 
-<h1>Signup!</h1>
+<h1 class="register">Join the Jungle!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
-
-  Name: <%= f.text_field :name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
-
+<%= form_for :user, :class => 'login-form', url: '/users' do |f| %>
+ <%= f.text_field :name, :class => 'login-username' , placeholder: 'name' %>
+ <%= f.text_field :email, :class => 'login-username' , placeholder: 'email'  %>
+ <%= f.password_field :password, :class => 'login-username'  , placeholder: 'password'  %>
+ <%= f.password_field :password_confirmation, :class => 'login-username'  , placeholder: 'comfirm password'  %>
+ <%= f.submit "Submit", :class => 'login-submit' %>
 <% end %>
+<div class="underlay-black"></div>
