--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-1">
+    <div class="new-product">
       <%= form_for [:admin, @product] do |form| %>
 
         <% if form.object.errors.any? %>
