--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,13 +44,11 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
-        <li>
-          <% if current_user %>
-            <li>Signed in as <%= current_user.name %></li> <li><%= link_to "Logout", '/logout' %></li>
-          <% else %>
-            <li><%= link_to 'Login', '/login' %></li> <li><%= link_to 'Signup', '/signup' %></li>
-          <% end %>
-        </li>
+        <% if current_user %>
+          <li class="current-user" >Welcome! <%= current_user.name %></li> <li><%= link_to "Logout", '/logout' %></li>
+        <% else %>
+          <li><%= link_to 'Login', '/login' %></li> <li><%= link_to 'Signup', '/signup' %></li>
+        <% end %>
       </ul>
     </div>
   </div>
