--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,7 +31,7 @@
           <%if(@product.reviews.length === 0)%>
             <dd>Not yet rated</dd>
           <%else%>
-            <dd><%= total_rating/@product.reviews.length.to_f %></dd>
+            <dd><%= total_rating/@product.reviews.length.to_f %>/5</dd>
           <%end%>
         </dl>
       </div>
@@ -39,14 +39,15 @@
   </article>
   <% if current_user%>
     <%= form_for([@product, @review]) do |form|%>
+    <div class="review-head">Post a Review</div>
     <div class='review-form'>
       <div class="field">
-        <%= form.label(:rating) %>
-        <%= form.select(:rating, [["1",1],["2",2],["3",3],["4",4],["5",5]]) %>
+        <%= form.text_area(:description, {id: :description}) %>
       </div>
 
       <div class="field">
-        <%= form.text_area(:description, {id: :description}) %>
+        <%= form.label(:rating) %>
+        <%= form.select(:rating, [["1",1],["2",2],["3",3],["4",4],["5",5]]) %>
       </div>
 
       <div class="actions">
@@ -61,7 +62,7 @@
   <% @product.reviews.reverse_each do |review|%>
     <div class="review">
   
-      <p class="rating">Rating: <%= review.rating%></p>
+      <p class="rating">Rating: <%= review.rating%>/5</p>
       <p class="userid">By User: <%= review.user.name%></p>
       <p class="review-description">Description</p>
       <p><%= review.description%></p>
